Fix checkbox alignment

--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,7 @@ body:not(.is-grabbing) .better-search-views-tree .tree-item-self.search-result-f
   flex-direction: column;
   flex-grow: 1;
 }
+
+.markdown-source-view.mod-cm6 .better-search-views-tree .task-list-item-checkbox {
+  margin-inline-start: calc(var(--checkbox-size) * -1.5);
+}
